# brave-fawkes-blocker

./: .gitignore  .gitmodules  README.md  blocked_urls.csv  plot.r
adblock-examples/reddit/record-08h/v0/: save.1k534P  save.34yGHQ  save.3G1wyI  save.3jstbA  save.5lhjjS  save.7G4tk6  save.7Ggs1B  save.7i1yLl  save.92BF5N  save.9do0dL  save.BK5R9k  save.BWXJKW  save.BxQTJj  save.D70nSm  save.DnvD26  save.FJHNA7  save.Fr2Mi5  save.HWdoRs  save.HXIOa8  save.Hj3gCx  save.JNkacY  save.Jjc1nl  save.NTsi2B  save.NyM9UV  save.P52mLu  save.PdimIS  save.PldW3B  save.PrRGeb  save.RMOtKU  save.RVYhox  save.RevQCT  save.Rkuk2b  save.T8rGTF  save.VSfM4J  save.Vo5tbO  save.XG3Ro1  save.XLjpf9  save.XsXqZu  save.Z6AX9s  save.ZW4NUt  (+31 more)
adblock-examples/reddit/record-08h/v1/: save.1EyRlp  save.3Auwwf  save.5DaOqI  save.5emIWP  save.9qe43k  save.BJVR8y  save.BXTasB  save.Bz72Kq  save.Dk9NMC  save.F0reYz  save.HfjRuz  save.JeYv70  save.L7riMo  save.LCIBAt  save.Lgxs1M  save.P37Zv1  save.PyKyKo  save.RHlr4j  save.RQgOB1  save.TXIga7  save.Tknk1K  save.VM3hvc  save.VnuEDu  save.f4hEmI  save.fhA2kE  save.fuY4FC  save.jIiTQc  save.jWVnHf  save.jejnU5  save.lxE508  save.p3fwE2  save.pf70Jh  save.piHFfn  save.rDmsrr  save.rKDlGR  save.rj2uTu  save.tIN6f0  save.tP9DtI  save.vmzNfQ  save.vrKkmm  (+7 more)
adblock-examples/reddit/record-b2b/v0/: save.12OogO  save.1FsQ30  save.31fhM4  save.3Hgjr5  save.3qBfqk  save.3s5oeT  save.5WGgwd  save.5xCXRC  (+68 more)
filtered-urls/: Cargo.toml
filtered-urls/data/: reddit-default-urls.txt  reddit-fawkes-urls.txt  reddit-nopatch-urls.txt
filtered-urls/src/: main.rs
(+276 files in other folders)
