[package]
name = "filtered-urls"
version = "0.1.0"
authors = ["ShaghayeghMrdn <shaghayeghmardani@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adblock = { git = "https://github.com/brave/adblock-rust.git" }

